Make the rotating compass an option. Also, fixes a shift that made the rotation not uniform

--- a/source/stylesheets/_tinycircleslider.css.sass
+++ b/source/stylesheets/_tinycircleslider.css.sass
@@ -1,15 +1,16 @@
 #rotatescroll
-  height: 36em
+  height: 464px
   position: relative
-  width: 36em
+  top: 2em
+  width: 465px
   display: block
   margin: 0 auto
   .overlay
     pointer-events: none
     margin: 0 auto
-    height: 35em
-    width: 35em
-    line-height: 35em
+    height: inherit
+    width: inherit
+    line-height: 464px
     text-align: center
   .viewport
     border-radius: 50%
